core/rbc-api/base/all.yaml
---
# Source: rbc-api/charts/mongodb/templates/standalone/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: rbc-mongodb
  namespace: production
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.1.10
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  type: ClusterIP
  ports:
    - name: mongodb
      port: 27017
      targetPort: mongodb
      nodePort: null
  selector:
    app.kubernetes.io/name: mongodb
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/component: mongodb
---
# Source: rbc-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rbc-api
    app.kubernetes.io/version: 1.1.4
    helm.sh/chart: rbc-api-1.0.2
  name: rbc-rbc-api
spec:
  ports:
  - name: rbc-api
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/name: rbc-api
  type: ClusterIP
---
# Source: rbc-api/charts/mongodb/templates/standalone/dep-sts.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rbc-mongodb
  namespace: production
  labels:
    app.kubernetes.io/name: mongodb
    helm.sh/chart: mongodb-11.1.10
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: mongodb
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
      app.kubernetes.io/instance: rbc
      app.kubernetes.io/component: mongodb
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongodb
        helm.sh/chart: mongodb-11.1.10
        app.kubernetes.io/instance: rbc
        app.kubernetes.io/managed-by: Helm
        app.kubernetes.io/component: mongodb
    spec:
      
      serviceAccountName: rbc-mongodb
      affinity:
        podAffinity:
          
        podAntiAffinity:
          
        nodeAffinity:
          
      securityContext:
        fsGroup: 1001
        sysctls: []
      containers:
        - name: mongodb
          image: docker.io/bitnami/mongodb:4.4.13-debian-10-r52
          imagePullPolicy: "IfNotPresent"
          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
          ports:
            - name: mongodb
              containerPort: 27017
          livenessProbe:
            exec:
              command:
                - mongo
                - --disableImplicitSessions
                - --eval
                - "db.adminCommand('ping')"
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          readinessProbe:
            exec:
              command:
                - bash
                - -ec
                - |
                  # Run the proper check depending on the version
                  [[ $(mongo --version | grep "MongoDB shell") =~ ([0-9]+\.[0-9]+\.[0-9]+) ]] && VERSION=${BASH_REMATCH[1]}
                  . /opt/bitnami/scripts/libversion.sh
                  VERSION_MAJOR="$(get_sematic_version "$VERSION" 1)"
                  VERSION_MINOR="$(get_sematic_version "$VERSION" 2)"
                  VERSION_PATCH="$(get_sematic_version "$VERSION" 3)"
                  if [[ "$VERSION_MAJOR" -ge 4 ]] && [[ "$VERSION_MINOR" -ge 4 ]] && [[ "$VERSION_PATCH" -ge 2 ]]; then
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.hello().isWritablePrimary || db.hello().secondary' | grep -q 'true'
                  else
                      mongo --disableImplicitSessions $TLS_OPTIONS --eval 'db.isMaster().ismaster || db.isMaster().secondary' | grep -q 'true'
                  fi
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 6
          resources:
            limits: {}
            requests: {}
          volumeMounts:
            - name: datadir
              mountPath: /bitnami/mongodb
              subPath: 
      volumes:
        - name: datadir
          persistentVolumeClaim:
            claimName: rbc-mongodb
---
# Source: rbc-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rbc-api
    app.kubernetes.io/version: 1.1.4
    helm.sh/chart: rbc-api-1.0.2
  name: rbc-rbc-api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: rbc
      app.kubernetes.io/name: rbc-api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: rbc
        app.kubernetes.io/name: rbc-api
    spec:
      containers:
      - env:
        - name: RBC_SVC_PORT
          value: "3000"
        - name: RBC_APP_NAME
          value: rbc-api
        - name: RBC_RELEASE_NAME
          value: rbc
        - name: RBC_RELEASE_NAMESPACE
          value: production
        - name: RBC_MONGODB_PORT
          value: "27017"
        - name: RBC_MONGODB_DATABASE
          value: rbc-api
        - name: RBC_MONGODB_USERNAME
          value: rbc-api
        - name: RBC_MONGODB_PASSWORD
          valueFrom:
            secretKeyRef:
              key: mongodb-passwords
              name: rbc-api-mongodb
        - name: RBC_DEBUG
          value: "true"
        image: curioushuman/rbc-api:1.1.4
        imagePullPolicy: IfNotPresent
        name: rbc-api
        ports:
        - containerPort: 3000
          name: rbc-api
          protocol: TCP
        resources: {}
        securityContext: {}
      securityContext: {}
      serviceAccountName: rbc-rbc-api
---
# Source: rbc-api/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
  labels:
    app.kubernetes.io/instance: rbc
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: rbc-api
    app.kubernetes.io/version: 1.1.4
    helm.sh/chart: rbc-api-1.0.2
  name: rbc-rbc-api
spec:
  ingressClassName: nginx
  rules:
  - host: rbc.dev
    http:
      paths:
      - backend:
          service:
            name: rbc-rbc-api
            port:
              number: 3000
        path: /api/?(.*)
        pathType: Prefix
